# research_image_retrieval

./: .gitignore  Dockerfile  bug_fixes.patch  memo.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
reference/manus/1_SPARSE/: SPARSE セマンティック保存適応型スパース表現エンコーディングによる効率的画像検索.md  sparse_model.py
reference/manus/2_HAMLET/: HAMLET 階層的適応型マルチモーダル埋め込みTransformerによる画像検索の実験分析.md  HAMLET 階層的適応型マルチモーダル埋め込みTransformerアーキテクチャ.md  hamlet_model.py
reference/manus/5_SPECTRUM/: SPECTRUM.md  SPECTRUM_manuscript.md  spectrum_architecture_design.md  spectrum_implementation.py  spectrum_test.py
reference/manus/6_iris/: IRIS_ Image Retrieval with Integrated Structural understanding.md  IRIS_ 画像検索モデル実装・評価レポート.md  IRISモデル学習・評価の実行結果.md  SPECTRUMフレームワークの画像検索における各モジュールの有効性分析.md  iris_train.py
reference/manus/7_AdaptiveHybridModel/: adaptive_hybrid_evaluate.py  adaptive_hybrid_retrieval.py  test_adaptive_hybrid_retrieval.py  新規画像検索手法の提案：AdaptiveHybridFeatureLearningforEfficientImageRetrieval.md
src/benchmark/: cvnet_training_example.sh  delg_r50_training.sh  dolg_net.py  dolgnet_training_example.sh  gem_r101_training.sh  gem_r50_training.sh  how_vlad_r50_training.sh  iris_evaluate.py  multi_model_train_modified.py  run_all_models.sh  senet_g2_50_training.sh  simple_ultron_test.py  sosnet_r50_training.sh  spca_training_example.sh  spoc_r50_training.sh  token_r50_training.sh  ultron.py  ultron_training.py  ultron_training_example.sh
src/benchmark/dataset/: __init__.py
src/research_image_retrieval_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+27 files in other folders)
